# KDGUI

./: .gitignore  CMakeLists.txt
assets/shaders/: PSDefault.hlsl  PSTexture.hlsl  VSDefault.hlsl  VSTexture.hlsl  compile.bat
inc/: KDEngine.h  precomp.h
inc/Codes/: KeyCodes.h  MouseCodes.h
inc/Debug/: DXGIInfoManager.h  GfxExcept.h  KDException.h  WndExcept.h
inc/Events/: ApplicationEvent.h  Event.h  KDEvent.h  KeyEvent.h  MouseEvent.h
inc/Graphics/: KDRenderer.h
inc/Graphics/Bindable/: Bindable.h  Bindables.h  Buffers.h  InputLayout.h  Sampler.h  Shaders.h  Texture.h  Topology.h
inc/Graphics/Drawable/: Drawable.h  DrawableBase.h  TexturedCube.h
inc/Input/: Input.h
inc/Utils/: FrameTimer.h
inc/WinBase/: KDApplication.h  KDWindow.h
src/: Bindable.cpp  DXGIInfoManager.cpp  Drawable.cpp  FrameTimer.cpp  Input.cpp  KDApplication.cpp  KDException.cpp  KDRenderer.cpp  KDWindow.cpp  Sandbox.cpp  Texture.cpp  TexturedCube.cpp  dxerr.cpp
